--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/emzagardb
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=
 
